gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusWhile1.deca
/*
Test sur l'ajout de plusieurs parenthèse à la fin de while

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
  boolean a = true;

  while (a)){
    print("hello");
    }
}
